--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 0;
+    padding: 2px 0;
 }
 
 .logo {
@@ -169,7 +169,7 @@ body {
     display: grid;
     grid-template-columns: 1.4fr 1fr;
     gap: 6rem;
-    align-items: center;
+    align-items: start;
 }
 
 
